added bib and fixed syntax in beapi

--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -1230,6 +1230,13 @@ keywords = {metamorphic relation, test case generation, Metamorphic testing, ora
   timestamp = {Tue, 06 Nov 2018 16:57:30 +0100},
 }
 
+@misc{junit,
+  title        = {JUnit 5 User Guide},
+  author       = {{JUnit Team}},
+  howpublished = {\url{https://junit.org/junit5/docs/current/user-guide/}},
+  note         = {Accessed: 2025-01-29}
+}
+
 @InProceedings{Rosner13,
   author    = {Nicol{\'{a}}s Rosner and Carlos Gustavo L{\'{o}}pez Pombo and Nazareno Aguirre and Ali Jaoua and Ali Mili and Marcelo F. Frias},
   title     = {Parallel Bounded Verification of Alloy Models by TranScoping},
@@ -1258,14 +1265,24 @@ keywords = {metamorphic relation, test case generation, Metamorphic testing, ora
   timestamp = {Wed, 17 May 2017 10:56:36 +0200},
 }
 
-@Article{Politano20,
-  author    = {M. Politano and V. Bengolea and F. Molina and N. Aguirre and M. F. Frias and P. Ponzio},
-  title     = {Efficient Bounded Exhaustive Input Generation from Program APIs},
-  journal   = {Paper's Website},
-  year      = {2020},
-  note      = {Available at: \url{https://sites.google.com/view/bounded-exhaustive-api}},
-  bibsource = {Google Scholar},
-  timestamp = {Wed, 17 May 2017 10:56:36 +0200},
+@inproceedings{Politano23,
+  title        = {Efficient Bounded Exhaustive Input Generation from Program APIs},
+  author       = {Politano, Mariano and Bengolea, Valeria and Molina, Facundo and Aguirre, Nazareno and Frias, Marcelo F. and Ponzio, Pablo},
+  booktitle    = {Fundamental Approaches to Software Engineering},
+  series       = {Lecture Notes in Computer Science},
+  publisher    = {Springer Nature Switzerland},
+  pages        = {111--132},
+  year         = {2023},
+  doi          = {},
+}
+@article{Politano24,
+  title        = {BEAPI: A tool for bounded exhaustive input generation from APIs},
+  author       = {Politano, Mariano and Bengolea, Valeria and Molina, Facundo and Aguirre, Nazareno and Frias, Marcelo and Ponzio, Pablo},
+  journal      = {Science of Computer Programming},
+  volume       = {238},
+  pages        = {103153},
+  year         = {2024},
+  publisher    = {Elsevier}
 }
 
 @inproceedings{galeotti2020,
